# GeoID

./: .dockerignore  .gitignore  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  VERSION  geoid-refs.json  manage.ps1  p.prof  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  setup.py
.github/actions/test-badge/: action.yml  generate_badge.py  generate_test_report.py
.github/scripts/: generate_refs_manifest.py  start-task.sh  start-worker.sh  start.sh
.github/workflows/: compose-validate.yml  lint-ratchet.yml  notify-downstream.yml  publish-refs.yml  test.yml  version-bump.yml
docker/: .env  Dockerfile  Dockerfile.db  README.md  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.test.yml  docker-compose.yml
docker/keycloak/: realm-export.json
docker/scripts/: bump-version.sh  db.sh  db_entrypoint_dev.sh  db_reset.sh  manage.ps1  manage.sh  rebuild.sh  start-task.sh  start.bat  start.sh  vendor-web-fonts.sh
docs/: DEPLOYMENT_REPOSITORY.md  authentication.md  cloud_run_vs_k8s_report.py  collection-metadata-architecture.md  contributing.md  database-audit-v1.md  getting-started.md  offline-assets.md  platform_manual.md  roadmap.md  tools-reference.md
docs/architecture/: 2026-06-09-stac-contributor-extension-point-design.md  caching.md  collection-lifecycle.md  configuration.md  database.md  distributed-tasks.md  iam-admin-surface-audit-751.md  items-policy-consolidation-957-950.md  migrations.md  overview.md  protocol.md  protocols.md  query_executor.md  tenant-storage-workspace.md
docs/components/: admin.md  auth.md  catalog.md  configs_api.md  coverages.md  dggs.md  edr.md  elasticsearch.md  events.md  features.md  field-types.md  gcp.md  items_schema.md  joins.md  maps.md  moving_features.md  ogc-extensions.md  platform_engines.md  processes.md  records.md  schema_evolution.md  sidecar_configs.md  stac.md  storage_drivers.md  styles.md  tasks.md  tiles.md  volumes.md  web.md  wfs.md
docs/design/: 2026-06-09-per-extension-web-sections-plan.md  2026-06-09-per-extension-web-sections.md  2026-06-09-shared-ogc-browser-design.md  2026-06-09-shared-ogc-browser-plan.md
docs/operations/: asset-upload-smoke.md  rate-limit-and-quotas.md
docs/proposals/: asset-transactions-extension.md  stac-datacube-scalable-dimensions.md
docs/superpowers/specs/: 2026-04-09-platform-notebooks-design.md  2026-05-26-iam-decoupling-via-platform-presets-design.md
docs/testing/: coverage-report.md  local-development.md
examples/geoparquet-duckdb-opensearch/: README.md  import_countries.py
examples/my-project/: README.md
examples/my-project/docker/: Dockerfile  docker-compose.yml
notebook_showcase/: conftest.py
notebook_showcase/notebooks/: _build_new_notebooks.py
notebook_showcase/notebooks/_setup/: 00_ensure_demo_catalog.ipynb
notebook_showcase/notebooks/assets/: 01_register_asset_and_gcs_upload.ipynb  02_asset_references_and_deletion_protection.ipynb  03_search_assets_across_collections.ipynb
notebook_showcase/notebooks/audit/: 01_es_public_private_audit.ipynb
notebook_showcase/notebooks/catalog/: 01_provision_tenant_catalog.ipynb  02_create_collection_with_layerconfig.ipynb  03_schema_evolution_add_column.ipynb
notebook_showcase/notebooks/configs/: 01_effective_config_waterfall_resolution.ipynb  02_bulk_quickstart_config_apply.ipynb  03_export_import_catalog_config.ipynb  04_self_discovery_slim_and_field_docs.ipynb
notebook_showcase/notebooks/coverages/: 01_coverage_bbox_datetime_query.ipynb  02_rangetype_introspection_and_cql2_filter.ipynb
notebook_showcase/notebooks/cycle_f_use_cases/: 01_uc1_pg_full_sidecars_routing.ipynb  02_uc2_schema_patch_multiversion.ipynb  03_uc3_private_es.ipynb  04_uc4_asset_refusal.ipynb  README.md  _build_use_cases.py
notebook_showcase/notebooks/dimensions/: 01_dekadal_calendar_dimensions.ipynb  02_admin_hierarchy_navigation.ipynb  03_pentadal_rainfall_pagination.ipynb
notebook_showcase/notebooks/gcp/: 01_bucket_init_upload_and_ingest.ipynb
notebook_showcase/notebooks/iam/: 01_provision_tenant_and_assign_roles.ipynb  02_self_service_permission_introspection.ipynb  03_custom_roles_and_policies.ipynb
notebook_showcase/notebooks/jupyterlite/: 01_copy_platform_notebook_and_edit.ipynb  02_manage_platform_notebooks_sysadmin.ipynb
notebook_showcase/notebooks/opensearch/: 01_trigger_full_catalog_reindex.ipynb  02_es_pipeline_health_and_geometry_check.ipynb
notebook_showcase/notebooks/processes/: 01_execute_process_synchronously.ipynb  02_long_running_async_job.ipynb  03_asset_scoped_geometry_validation.ipynb
notebook_showcase/notebooks/queryables/: 01_cql2_and_collection_search.ipynb
notebooks/admin_boundaries_fixed_schema/: README.md  walkthrough.ipynb
scripts/: build-jupyterlite.sh  bump-version.sh  check_gdal_pin_consistency.py  check_lint_ceilings.py  check_no_web_framework_in_core.py  check_protocols.py  cleanup.sh  cleanup_orphan_iam_grants.sql  db_reset.sh  export_ai_context.py  install-hooks.sh  populate.sh  populate_demo_data.py  rebuild.sh  report.sh  test_es_audit_fixes.py  vendor-web-fonts.sh
scripts/debug/: verify_search_optimization.py
scripts/hooks/: pre-commit
src/dynastore/: _version.py  bootstrap.py  main.py  main_task.py  main_worker.py
src/dynastore/docker/: .env  .env.example  Dockerfile  (+12 more)
tests/: _repo_paths.py  conftest.py  test_architectural_invariants.py  test_cleanup_db_gis_dev_guard.py  test_conftest_ensure_worker_db_race.py  test_dimension_similarity.py  test_dimensions_conformance_pin.py  test_dimensions_fingerprint.py  test_discovery_priority.py  test_extension_install_completeness.py  test_hierarchy_providers.py  test_sql_bindparam_cast_invariant.py  verify_identity_refactor.py  verify_search_optimization.py
tests/data/: test_catalog.json  test_catalog_config.json  test_collection.json  test_item.json
tests/dynastore/: conftest.py  test_dev_compose_config_in_sync.py  test_json_formatter_timestamp.py  test_readiness_probe.py  test_sentinel_writer_hook.py  test_shared_catalog_fixture.py
tests/extensions/: test_landing_redesign.py
(+2060 files in other folders)
