[project]
name = "DynaStore"
dynamic = ["version"]
description = "DynaStore application"
authors = [
    { name = "Carlo Cancellieri", email = "ccancellieri@gmail.com" }
]
dependencies = [ # Minimal Core Framework
    "pydantic>=2.0",
    "pydantic-settings>=2.3.0",
    "pydantic-extra-types>=2.10.6",
    "python-dotenv>=1.0.0",
    "python-dateutil",
    "orjson>=3.9.0",
]
requires-python = ">=3.12"
license-files = ["LICENSE"]
readme = "README.md"

# The 'optional-dependencies' defines the dependencies for each module/extension/task
# and aggregates them into 'api', 'worker', and 'all' variants for deployment.

[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
# ==========================================================================
# GRANULAR MODULES вҖ” building blocks, one per domain
# Use underscores to match entry-point names and folder names.
# pip normalizes _ to - internally (PEP 685); no effect on resolution.
# ==========================================================================
module_storage = []
module_storage_postgresql = []
module_storage_duckdb = ["duckdb>=1.0.0"]
module_storage_iceberg = ["pyiceberg[sql-postgres]>=0.9.0", "pyarrow>=14.0.0"]
module_storage_elasticsearch = ["dynastore[module_elasticsearch]"]
module_storage_elasticsearch_obfuscated = ["dynastore[module_elasticsearch]"]
module_storage_elasticsearch_assets = ["dynastore[module_elasticsearch]"]
module_metadata_postgresql = []
module_collection_elasticsearch = ["dynastore[module_elasticsearch]"]
module_catalog_elasticsearch = ["dynastore[module_elasticsearch]"]
module_stac = []
module_catalog = ["dynastore[geospatial_core]", "sqlalchemy>=2.0.0"]
module_gcp = ["gcloud-aio-storage==9.6.0", "google-cloud-bigquery==3.24.0", "google-cloud-run", "google-cloud-storage>=3.1.0", "google-cloud-pubsub", "gcsfs>=2024.5.0", "charset-normalizer>=3", "urllib3>=2.0,<3", "requests>=2.32", "httpx", "pmtiles>=3.2.0"]
module_datastore = ["dynastore[db_sync]", "psycopg2-binary>=2.9.7"]
module_db_config = ["sqlalchemy", "geoalchemy2", "h3>=4.4.2", "s2sphere>=0.2.5", "python-dateutil"]
module_iam = ["pydantic[email]", "PyJWT>=2.0.0"]
module_db = ["dynastore[db_async]", "sqlalchemy[asyncio]", "asyncpg"]
module_crs = ["dynastore[geospatial_core]", "pyproj>=3.0.0"]
module_events = ["psycopg[binary,pool]"]
module_elasticsearch = ["opensearch-py[async]", "httpx"]
module_gdal = ["dynastore[geospatial_core]", "GDAL==3.12.3"]
module_tiles = ["dynastore[geospatial_core]", "pmtiles>=3.2.0"]
module_cache = ["valkey>=6.0", "msgpack>=1.0"]
module_tasks = []
module_proxy = []
module_styles = []
module_moving_features = []
module_stats = []
module_notebooks = ["httpx", "python-dotenv"]

# ==========================================================================
# GRANULAR EXTENSIONS вҖ” FastAPI routers, one per domain
# ==========================================================================
extension_base = ["fastapi>=0.100"]
extension_web = ["dynastore[extension_base]", "markdown>=3.3.7"]
extension_httpx = ["dynastore[extension_base]", "httpx"]
extension_catalog = ["dynastore[extension_base,module_catalog]"]
extension_stac = ["dynastore[extension_base]", "pystac[validation]>=1.13.0", "stac-pydantic[validation]>=3.1.0"]
extension_auth = ["dynastore[extension_base]", "python-multipart>=0.0.26", "itsdangerous>=2.0"]
extension_template = ["dynastore[extension_base]", "attrs>=25.3.0", "aiohttp>=3.12.15", "jinja2>=3.1.6", "xmltodict>=0.13.0", "httpx>=0.24.1"]
extension_processes = ["dynastore[extension_base]", "jsonschema"]
extension_features = ["dynastore[extension_base,geospatial_core]", "pygeofilter[backend-sqlalchemy]"]
extension_tiles = ["dynastore[extension_base,module_tiles]"]
extension_volumes = ["dynastore[extension_base]", "shapely>=2.0"]
extension_tasks = ["dynastore[extension_base,module_tasks]"]
extension_proxy = ["dynastore[extension_base,module_proxy]"]
extension_gdal = ["dynastore[extension_base,module_gdal]"]
extension_styles = ["dynastore[extension_base,module_styles]"]
extension_moving_features = ["dynastore[extension_base,module_moving_features]"]
extension_iam = ["dynastore[extension_base,module_iam]"]
extension_logs = ["dynastore[extension_base]", "httpx"]
extension_configs = ["dynastore[extension_base]"]
extension_stats = ["dynastore[extension_base,module_stats]"]
extension_crs = ["dynastore[extension_base,module_crs]"]
extension_events = ["dynastore[extension_base,module_events]"]
extension_wfs = ["dynastore[extension_base,geospatial_core]"]
extension_admin = ["dynastore[extension_base,extension_iam]"]
extension_assets = ["dynastore[extension_base]"]
extension_notebooks = ["dynastore[extension_base,module_notebooks]"]
extension_records = ["dynastore[extension_base]"]
extension_search = ["dynastore[extension_base]"]
extension_gcp_bucket = ["dynastore[extension_base,module_gcp]"]
extension_geoid = ["dynastore[extension_base,extension_web]", "user-agents>=2.2.0"]
extension_maps = ["dynastore[extension_base,geospatial_core,mvt]", "GDAL==3.12.3"]
extension_coverages = ["dynastore[extension_base,geospatial_core]"]
extension_edr = ["dynastore[extension_base,geospatial_core]"]
extension_dggs = ["dynastore[extension_base,geospatial_core]", "h3>=4.1.0", "s2sphere>=0.2.5"]
module_coverages_netcdf = ["netCDF4>=1.6.0", "xarray>=2024.0.0"]
module_coverages_zarr = ["zarr>=2.18.0", "xarray>=2024.0.0"]
extension_dwh = ["dynastore[extension_base,dwh]"]
extension_dimensions = ["dynastore[extension_base]", "ogc-dimensions @ git+https://github.com/ccancellieri/ogc-dimensions.git@main#subdirectory=reference-implementation"]

# ==========================================================================
# GRANULAR TASKS
#
# Naming convention (SSOT вҖ” don't drift):
#   * catalog_task_<name> вҖ” lightweight, in-process task hosted by the catalog
#                           service (executed via FastAPI BackgroundTasks).
#                           Examples: bucket provisioning, GCS finalize hooks,
#                           catalog cleanup.
#   * worker_task_<name>  вҖ” heavy task packaged for Cloud Run Jobs (sync-db).
#                           On-prem, the `worker` service simulates these via
#                           in-process BackgroundTasks but the SCOPE naming
#                           stays the same so SCOPE=worker_task_<name> is a
#                           single, unambiguous task-type declaration.
#
# The gcp_cloud_runner reads each Cloud Run Job's SCOPE env var, strips the
# `worker_task_` prefix, and maps the remainder to the task entry-point name.
# See src/dynastore/modules/gcp/gcp_module.py::get_job_config.
# ==========================================================================

# ---- Dependency-only aliases (not runner-typed; consumed by the
#      catalog_task_* / worker_task_* extras below as composition blocks).
task_gdal_deps = ["dynastore[module_gdal]"]
task_elasticsearch_deps = ["dynastore[module_elasticsearch]"]
task_elasticsearch_indexer_deps = ["dynastore[module_elasticsearch]"]
task_ingestion_deps = ["dynastore[geospatial,module_gcp]"]
task_dwh_join_deps = ["dynastore[dwh]"]
task_export_features_deps = ["dynastore[geospatial_core,stac]"]
task_tiles_preseed_deps = ["dynastore[geospatial_core]", "morecantile>=7.0.3,<8"]
task_dimensions_materialize_deps = ["dynastore[extension_dimensions]"]

# ---- Catalog-hosted lightweight tasks (async-db, in-process).
catalog_task_gcp_provision = ["dynastore[module_gcp]"]
catalog_task_gcs_storage_event = ["dynastore[module_gcp,module_catalog]"]
catalog_task_gcp_catalog_cleanup = ["dynastore[module_gcp,module_catalog]"]

# ==========================================================================
# PUBLIC FEATURE ALIASES вҖ” compose module + extension in one name
# ==========================================================================
catalog = ["dynastore[module_catalog,extension_catalog]"]
gcp = ["dynastore[module_gcp,extension_gcp_bucket]"]
datastore = ["dynastore[module_datastore]"]
db_config = ["dynastore[module_db_config]"]
iam = ["dynastore[module_iam,extension_iam]"]
db = ["dynastore[module_db]"]
crs = ["dynastore[module_crs,extension_crs]"]
cache = ["dynastore[module_cache]"]
events = ["dynastore[module_events,extension_events]"]
elasticsearch = ["dynastore[module_elasticsearch,task_elasticsearch_deps]"]
gdal = ["dynastore[module_gdal,extension_gdal,task_gdal_deps]"]
maps = ["dynastore[extension_maps]"]
stac = ["dynastore[module_stac, extension_stac]"]
stats = ["dynastore[module_stats,extension_stats]"]
web = ["dynastore[extension_web]"]
geoid = ["dynastore[web_core,extension_geoid]"]
processes = ["dynastore[extension_processes]"]
features = ["dynastore[extension_features]"]
styles = ["dynastore[module_styles,extension_styles]"]
moving_features = ["dynastore[module_moving_features,extension_moving_features]"]
tiles = ["dynastore[module_tiles,extension_tiles]"]
tasks = ["dynastore[module_tasks,extension_tasks]"]
proxy = ["dynastore[module_proxy,extension_proxy]"]
logs = ["dynastore[extension_logs]"]
assets = ["dynastore[extension_assets]"]
configs = ["dynastore[extension_configs]"]
search = ["dynastore[extension_search]"]
storage = ["dynastore[module_storage]"]
auth = ["dynastore[extension_auth]"]
template = ["dynastore[extension_template]"]
dimensions = ["dynastore[extension_dimensions]"]
notebooks = ["dynastore[extension_notebooks]"]
edr = ["dynastore[extension_edr]"]

# ==========================================================================
# PRIMITIVES
# ==========================================================================
geospatial_core = [
    "shapely>=2.1.1",
    "geojson-pydantic>=1.0.0",
]
geospatial_io = [
    "dynastore[geospatial_core]",
    "lxml>=6.1.0,<7",
    "pyarrow<19,>=16",
    "numpy==1.26.4",
    "geopandas>=0.14.0",
    "fiona>=1.9.4",
]
geospatial = ["dynastore[geospatial_io]"]
db_async = ["dynastore[db_config,db]"]
db_sync = ["dynastore[db_config,datastore]"]

# ==========================================================================
# DOMAIN GROUPS вҖ” major functional areas, composable independently
#
#   0. core         вҖ” async DB, web framework, system config & events
#   1. catalog_grp  вҖ” data catalog, features, STAC, assets, search, records
#   2. maps_grp     вҖ” rendering: WFS, tiles, CRS, styles, maps
#   3. google_grp   вҖ” GCP storage, BigQuery DWH
#   4. auth_grp     вҖ” iam + auth + admin  (always the LAST wrapper)
#   5. tools_grp    вҖ” HTTP client, templating (proxy is opt-in for catalog/maps)
#   6. monitor_grp  вҖ” stats, logs
#   7. index_grp    вҖ” Elasticsearch full-text search
#   *  processes    вҖ” standalone; on catalog (cloud) or worker (on-prem)
#
# ==========================================================================
core = ["dynastore[db_async,web,configs,events,storage,cache]"]
# catalog_grp split: data layer (needed by maps for collection reads + /features)
# vs public catalog routers (stac/assets/search/records вҖ” not on maps).
catalog_data_grp = ["dynastore[geospatial_core,catalog,features]"]
catalog_routes_grp = ["dynastore[stac,assets,search,extension_records]"]
catalog_grp = ["dynastore[catalog_data_grp,catalog_routes_grp]"]
maps_grp = ["dynastore[styles,maps,extension_wfs,tiles,crs,gdal,extension_coverages]"]
# google_grp split: dwh is rendering input (BQ joins also live here),
# gcp is the bucket-admin router (not on maps).
dwh_grp = ["dynastore[extension_dwh]"]
gcp_routes_grp = ["dynastore[gcp]"]
google_grp = ["dynastore[gcp_routes_grp,dwh_grp]"]
auth_grp = ["dynastore[iam,auth,extension_admin]"]
# tools_grp split: core proxy/template vs route-heavy dimensions/notebooks.
tools_core_grp = ["dynastore[extension_httpx,template]"]
tools_grp = ["dynastore[tools_core_grp,dimensions,notebooks]"]
monitor_grp = ["dynastore[stats,logs]"]
index_grp = ["dynastore[elasticsearch,task_elasticsearch_indexer_deps]"]
# drivers_grp вҖ” all storage/asset/metadata drivers (both collection and asset domains)
drivers_grp = ["dynastore[module_storage_postgresql,module_storage_duckdb,module_storage_iceberg,module_storage_elasticsearch,module_storage_elasticsearch_obfuscated,module_storage_elasticsearch_assets,module_metadata_postgresql,module_collection_elasticsearch,module_catalog_elasticsearch]"]

# ==========================================================================
# TASK GROUPINGS (sync-db)
# ==========================================================================
task_base = ["dynastore[db_sync,module_tasks,module_events,extension_processes]"]
ingestion = ["dynastore[task_base,module_gcp,task_ingestion_deps]"]

# ---- Worker / Cloud Run Job task extras (heavy; sync-db via task_base).
# One extras per task. Each Cloud Run Job is deployed with
# SCOPE=worker_task_<name> вҖ” a single unambiguous identifier the catalog's
# gcp_cloud_runner uses to map discovered jobs back to task entry-points.
worker_task_dwh_join = ["dynastore[task_base,dwh]"]
worker_task_ingestion = ["dynastore[ingestion,catalog_grp,google_grp,gdal]"]
worker_task_export_features = ["dynastore[task_base,stac,geospatial_core]"]
worker_task_tiles_preseed = ["dynastore[task_base,tiles,crs]", "morecantile>=7.0.3,<8"]
worker_task_gdal = ["dynastore[task_base,gdal]"]
worker_task_dimensions_materialize = ["dynastore[task_base,extension_dimensions]"]
worker_task_elasticsearch_indexer = ["dynastore[task_base,elasticsearch,task_elasticsearch_indexer_deps]"]

# ==========================================================================
# SERVICE COMPOSITIONS (async-db)
#
#   в”Ңв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”җ
#   в”Ӯ  Domain groups (all WITHOUT auth)                        в”Ӯ
#   в”ңв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Ө
#   в”Ӯ  core        = db_async + web + configs + events         в”Ӯ
#   в”Ӯ  catalog_grp = geospatial + catalog + features + stac    в”Ӯ
#   в”Ӯ               + assets + search + records                в”Ӯ
#   в”Ӯ  maps_grp    = styles + maps + wfs + tiles + crs + gdal  в”Ӯ
#   в”Ӯ  google_grp  = gcp + dwh                                 в”Ӯ
#   в”Ӯ  tools_grp   = httpx + template                          в”Ӯ
#   в”Ӯ  monitor_grp = stats + logs                              в”Ӯ
#   в”Ӯ  index_grp   = elasticsearch                             в”Ӯ
#   в”ңв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Ө
#   в”Ӯ  Standalone (deployment-dependent)                       в”Ӯ
#   в”ңв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Ө
#   в”Ӯ  processes   = task orchestration API                     в”Ӯ
#   в”Ӯ               cloud  вҶ’ on catalog (tasks on Cloud Run)   в”Ӯ
#   в”Ӯ               on-prem вҶ’ on worker  (tasks run locally)   в”Ӯ
#   в”ңв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Ө
#   в”Ӯ  Auth wrapper (added LAST)                               в”Ӯ
#   в”ңв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Ө
#   в”Ӯ  auth_grp    = iam + auth + admin                        в”Ӯ
#   в”ңв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Ө
#   в”Ӯ  Deployable services                                     в”Ӯ
#   в”ңв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Ө
#   в”Ӯ  api_open       = core + catalog + google                в”Ӯ
#   в”Ӯ                   + monitor + index                      в”Ӯ
#   в”Ӯ                   + processes               ... NO auth  в”Ӯ
#   в”Ӯ                   (tools_grp on dedicated tools service) в”Ӯ
#   в”Ӯ  api_catalog    = api_open + auth_grp      ... WITH auth в”Ӯ
#   в”Ӯ  api_maps_open  = core + catalog_data + maps + dwh       в”Ӯ
#   в”Ӯ                   + tools_core + es-cat    ... NO auth   в”Ӯ
#   в”Ӯ                   (vector producer + raster renderer;    в”Ӯ
#   в”Ӯ                    no stac/assets/search/records/stats/  в”Ӯ
#   в”Ӯ                    logs/gcp/dimensions/notebooks)        в”Ӯ
#   в”Ӯ  api_maps       = api_maps_open + auth_grp ... WITH auth в”Ӯ
#   в”Ӯ  api_features   = core + catalog_grp        ... NO auth  в”Ӯ
#   в”Ӯ  api_full       = api_catalog + maps_grp                 в”Ӯ
#   в”Ӯ                   + geospatial_io          ... WITH auth в”Ӯ
#   в”Ӯ  geoid_service  = api_catalog + geoid вҶҗ ONLY auth svc   в”Ӯ
#   в”Ӯ  worker_service = core + catalog + google + index        в”Ӯ
#   в”Ӯ                   + tasks + processes                     в”Ӯ
#   в”Ӯ                   + ingestion + jobs        ... NO auth  в”Ӯ
#   в”ңв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Ө
#   в”Ӯ  Local-only scopes                                       в”Ӯ
#   в”ңв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Ө
#   в”Ӯ  catalog_local  = api_open w/o google_grp     ... NO gcp в”Ӯ
#   в”Ӯ  worker_local   = worker_service + monitor    ... NO authв”Ӯ
#   в””в”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”ҳ
#
# Docker scopes (scope_* extras):
#   catalog service -> CATALOG_SCOPE=scope_catalog (no auth)
#   geoid   service -> GEOID_SCOPE=scope_geoid     (catalog + auth + geoid UI)
#   worker  service -> WORKER_SCOPE=scope_worker   (tasks + processes/stats UI)
#   tools   service -> TOOLS_SCOPE=scope_tools     (proxy + template)
#   maps    service -> MAPS_SCOPE=scope_maps       (tiles/styles, no auth)
#
# ==========================================================================
# api_open: full catalog WITHOUT auth вҖ” open for testing (no tools_grp: proxy/template served by the dedicated tools service)
api_open = ["dynastore[core,catalog_grp,google_grp,monitor_grp,index_grp,processes,tasks,catalog_task_gcp_provision,catalog_task_gcs_storage_event,catalog_task_gcp_catalog_cleanup]"]
# api_catalog: api_open + auth (most common production deployment)
api_catalog = ["dynastore[api_open,auth_grp]"]
# api_maps_open: vector producer + raster renderer, no auth.
# Surface limited to: /maps /tiles /styles /wfs /features /coverages /crs /gdal /dwh /joins
# (plus ALWAYS_ON: /configs /web /events /admin /iam /auth /tools /template /httpx).
# Excluded vs. legacy: catalog_routes_grp (stac/assets/search/records),
# gcp_routes_grp, monitor_grp (stats/logs), dimensions, notebooks.
api_maps_open = ["dynastore[core,catalog_data_grp,maps_grp,dwh_grp,tools_core_grp,module_catalog_elasticsearch]"]
# api_maps: same surface WITH auth (kept for reference / future use)
api_maps = ["dynastore[api_maps_open,auth_grp]"]
# api_features: lightweight local-dev service вҖ” OGC Features + STAC, no GCP/tools/index
api_features = ["dynastore[core,catalog_grp]"]
# api_full: all features (local dev or monolithic deployments)
api_full = ["dynastore[api_catalog,maps_grp,geospatial_io]"]
# geoid_service: api_catalog + geoid extension вҖ” the ONLY service with auth
geoid_service = ["dynastore[api_catalog,extension_geoid]"]
# worker_service: background task processor (sync-db tasks + async-db catalog reads), no auth
worker_service = ["dynastore[core,catalog_grp,google_grp,index_grp,tasks,processes,ingestion,worker_task_export_features,worker_task_dwh_join,worker_task_tiles_preseed,worker_task_gdal,worker_task_dimensions_materialize,catalog_task_gcp_provision,catalog_task_gcs_storage_event,catalog_task_gcp_catalog_cleanup]"]
# catalog_local: local dev catalog вҖ” api_open without google_grp/gcp_cloud_runner (no tools_grp: use the dedicated tools service)
catalog_local = ["dynastore[core,catalog_grp,monitor_grp,index_grp,processes]"]
# worker_local: local HTTP simulation of Cloud Run Jobs вҖ” all tasks + processes/stats UI
worker_local = ["dynastore[worker_service,monitor_grp]"]

# ==========================================================================
# DOCKER SERVICE SCOPES (used by docker-compose SCOPE build arg)
# Prefixed with scope_ to avoid collision with module-level extras above.
# ==========================================================================
# scope_catalog: catalog API without auth вҖ” open for local testing
scope_catalog = ["dynastore[core,catalog_grp,google_grp,monitor_grp,index_grp,processes,tasks,catalog_task_gcp_provision,catalog_task_gcs_storage_event,catalog_task_gcp_catalog_cleanup,module_cache,notebooks,dimensions,drivers_grp]"]
# scope_geoid: catalog + geoid UI + auth/iam вҖ” maps to geospatial-auth in cloud
scope_geoid = ["dynastore[scope_catalog,extension_geoid,auth_grp]"]
# scope_worker: background task processor вҖ” headless Cloud Run job runner
scope_worker = ["dynastore[core,module_catalog,gcp,extension_dwh,index_grp,tasks,ingestion,worker_task_export_features,worker_task_dwh_join,worker_task_tiles_preseed,worker_task_gdal,worker_task_dimensions_materialize,catalog_task_gcp_provision,catalog_task_gcs_storage_event,catalog_task_gcp_catalog_cleanup]"]
# scope_tools: proxy + template tools service вҖ” no auth
scope_tools = ["dynastore[core,template,notebooks,cache,dimensions,proxy]"]
# scope_maps: vector producer + raster renderer (local docker), no auth.
# Mirrors api_maps_open + module_cache + drivers_grp so local data reads work.
scope_maps = ["dynastore[core,catalog_data_grp,maps_grp,dwh_grp,tools_core_grp,module_cache,module_catalog_elasticsearch,drivers_grp]"]

# ==========================================================================
# DEVELOPMENT & TESTING
# ==========================================================================
all = ["dynastore[api_full,geoid_service,worker_service]"]
# Superset of `all` that pulls in every optional driver / task-only dependency
# referenced anywhere in src/. Pyright/mypy need these resolvable to clear
# `reportMissingImports` on optional code paths (duckdb, pyiceberg, morecantile,
# вҖҰ). Not for runtime: keep service images on `all` to stay slim.
typecheck = ["dynastore[all,drivers_grp,task_tiles_preseed_deps,extension_template]"]
test = ["pytest>=8.0.0", "pytest-asyncio>=0.23.5", "pytest-cov>=4.1.0", "pytest-xdist>=3.5.0", "pytest-timeout>=2.3.0", "requests>=2.31.0", "orjson>=3.9.15"]
notebooks_test = ["dynastore[test]", "nbval>=0.11", "ipykernel>=6.29", "jupyter-client>=8.6", "httpx>=0.27", "python-dotenv>=1.0"]
lite_build = ["jupyterlite-core>=0.4", "jupyterlite-pyodide-kernel>=0.4"]
dev = ["ruff", "black", "mypy", "pyright>=1.1.390", "debugpy", "dynastore[test]"]

# Internals/Aliases
mvt = []
# /join/* OGC API - Joins extension. Ships alongside dwh (same BQ deps;
# joins extension is OGC-conformant, dwh keeps the legacy tile-join surface).
joins = ["google-cloud-bigquery", "db-dtypes", "pandas"]
# Installing dwh pulls in joins so deployments that ship the legacy
# tile-join surface also expose the new OGC /join/* endpoints.
dwh = ["dynastore[joins]"]
psycopg_pool = ["psycopg[binary,pool]"]

[project.entry-points."dynastore.modules"]
cache = "dynastore.modules.cache.cache_module:CacheModule"
tasks = "dynastore.modules.tasks.tasks_module:TasksModule"
proxy = "dynastore.modules.proxy.proxy_module:ProxyModule"
gdal = "dynastore.modules.gdal.gdal_module:GdalModule"
catalog = "dynastore.modules.catalog.catalog_module:CatalogModule"
gcp = "dynastore.modules.gcp.gcp_module:GCPModule"
tiles = "dynastore.modules.tiles.tiles_module:TilesModule"
datastore = "dynastore.modules.datastore.datastore_service:DatastoreModule"
styles = "dynastore.modules.styles.styles_module:StylesModule"
moving_features = "dynastore.modules.moving_features.mf_module:MovingFeaturesModule"
db_config = "dynastore.modules.db_config.db_config_service:DBConfigModule"
iam = "dynastore.modules.iam.module:IamModule"
db = "dynastore.modules.db.db_service:DBService"
crs = "dynastore.modules.crs.crs_module:CRSModule"
events = "dynastore.modules.events.events_module:EventsModule"
notebooks = "dynastore.modules.notebooks.notebooks_module:NotebooksModule"
stac = "dynastore.modules.stac.module:StacModule"
elasticsearch = "dynastore.modules.elasticsearch.module:ElasticsearchModule"
stats = "dynastore.modules.stats.stats_module:STATS"
web = "dynastore.modules.web.web_module:WebModule"
storage_postgresql = "dynastore.modules.storage.drivers.postgresql:ItemsPostgresqlDriver"
storage_elasticsearch = "dynastore.modules.storage.drivers.elasticsearch:ItemsElasticsearchDriver"
storage_elasticsearch_obfuscated = "dynastore.modules.storage.drivers.elasticsearch:ItemsElasticsearchObfuscatedDriver"
storage_elasticsearch_assets = "dynastore.modules.storage.drivers.elasticsearch:AssetElasticsearchDriver"
storage_duckdb = "dynastore.modules.storage.drivers.duckdb:ItemsDuckdbDriver"
storage_iceberg = "dynastore.modules.storage.drivers.iceberg:ItemsIcebergDriver"
storage_bigquery = "dynastore.modules.storage.drivers.bigquery:ItemsBigQueryDriver"
collection_elasticsearch = "dynastore.modules.elasticsearch.collection_es_driver:CollectionElasticsearchDriver"
catalog_elasticsearch = "dynastore.modules.elasticsearch.catalog_es_driver:CatalogElasticsearchDriver"
# PR 1e step 3b вҖ” collection-tier PG metadata is now served by the
# composition driver ``CollectionPostgresqlDriver``.  It instantiates
# ``CollectionCorePostgresqlDriver`` + (try-imported)
# ``CollectionStacPostgresqlDriver`` internally via
# ``MetadataPgSidecarRegistry``; the two raw drivers' entry-points
# were removed in this PR so ``get_protocols(CollectionMetadataStore)``
# no longer surfaces them and routing fan-out happens once, inside the
# wrapper.  The CATALOG-tier raw drivers stay entry-point-registered
# until step 3c lands ``CatalogPostgresqlDriver``.
collection_postgresql = "dynastore.modules.storage.drivers.collection_metadata_postgresql:CollectionPostgresqlDriver"
# PR 1e step 3c вҖ” catalog-tier PG metadata is now served by the
# composition driver ``CatalogPostgresqlDriver``.  It instantiates
# ``CatalogCorePostgresqlDriver`` + (try-imported)
# ``CatalogStacPostgresqlDriver`` internally via
# ``CatalogMetadataPgSidecarRegistry``; the two raw drivers'
# entry-points were removed in this PR so
# ``get_protocols(CatalogMetadataStore)`` no longer surfaces them.
catalog_postgresql = "dynastore.modules.storage.drivers.catalog_metadata_postgresql:CatalogPostgresqlDriver"
# M3.2 вҖ” first concrete INDEX-role driver for the catalog tier.
# Diagnostic-only (logs every dispatch); NOT in the default
# CatalogRoutingConfig.operations[INDEX] list вҖ” opt-in via platform
# override.  See src/dynastore/modules/storage/drivers/catalog_log_indexer.py
# for rationale + future real-indexer reference-implementation notes.
metadata_catalog_log_indexer = "dynastore.modules.storage.drivers.catalog_log_indexer:LogCatalogIndexer"

[project.entry-points."dynastore.extensions"]
maps = "dynastore.extensions.maps.maps_service:MapsService"
stac = "dynastore.extensions.stac.stac_service:STACService"
dwh = "dynastore.extensions.dwh.dwh:DwhService"
joins = "dynastore.extensions.joins.joins_service:JoinsService"
tasks = "dynastore.extensions.tasks.tasks_service:TasksService"
proxy = "dynastore.extensions.proxy.proxy_service:ProxyService"
gdal = "dynastore.extensions.gdal.gdal_service:GdalService"
auth = "dynastore.extensions.auth.authentication:Authentication"
web = "dynastore.extensions.web.web:Web"
processes = "dynastore.extensions.processes.processes_service:ProcessesService"
features = "dynastore.extensions.features.features_service:OGCFeaturesService"
template = "dynastore.extensions.template.templating:TemplatingExtension"
admin = "dynastore.extensions.admin.admin_service:AdminService"
geoid = "dynastore.extensions.geoid.geoid:Geoid"
gcp_bucket = "dynastore.extensions.gcp.bucket_service:BucketService"
search = "dynastore.extensions.search.search_service:SearchService"
styles = "dynastore.extensions.styles.styles_service:StylesService"
httpx = "dynastore.extensions.httpx.httpx_service:HttpxExtension"
iam = "dynastore.extensions.iam.service:IamExtension"
logs = "dynastore.extensions.logs.log_extension:LogExtension"
configs = "dynastore.extensions.configs.service:ConfigsService"
crs = "dynastore.extensions.crs.crs_extension:CRSExtension"
events = "dynastore.extensions.events.extension:EventsExtension"
wfs = "dynastore.extensions.wfs.wfs_service:WFSService"
assets = "dynastore.extensions.assets.assets_service:AssetService"
notebooks = "dynastore.extensions.notebooks.notebooks_extension:NotebooksExtension"
stats = "dynastore.extensions.stats.extension:StatsExtension"
tiles = "dynastore.extensions.tiles.tiles_service:TilesService"
dimensions = "dynastore.extensions.dimensions.dimensions_extension:DimensionsExtension"
records = "dynastore.extensions.records.records_service:RecordsService"
coverages = "dynastore.extensions.coverages.coverages_service:CoveragesService"
edr = "dynastore.extensions.edr.edr_service:EDRService"
moving_features = "dynastore.extensions.moving_features.mf_service:MovingFeaturesService"
dggs = "dynastore.extensions.dggs.dggs_service:DGGSService"

[project.entry-points."dynastore.tasks"]
gdal = "dynastore.tasks.gdal.gdalinfo_task:GdalInfoTask"
gcp_provision = "dynastore.tasks.gcp_provision.task:ProvisioningTask"
elasticsearch = "dynastore.tasks.elasticsearch.tasks:ElasticsearchIndexTask"
elasticsearch_indexer = "dynastore.tasks.elasticsearch_indexer.tasks:BulkCatalogReindexTask"
ingestion = "dynastore.tasks.ingestion.ingestion_task:IngestionTask"
dwh_join = "dynastore.tasks.dwh_join.dwh_join_export_task:DwhJoinExportTask"
export_features = "dynastore.tasks.export_features.export_features_task:ExportFeaturesTask"
tiles_preseed = "dynastore.tasks.tiles_preseed.task:TilePreseedTask"
dimensions_materialize = "dynastore.tasks.dimensions_materialize.task:DimensionsMaterializeTask"
gcs_storage_event = "dynastore.tasks.gcp.gcs_storage_event_task:GcsStorageEventTask"
gcp_catalog_cleanup = "dynastore.tasks.gcp.gcp_catalog_cleanup_task:GcpCatalogCleanupTask"

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools]
# Include files specified in MANIFEST.in
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Include all .html and .sql files found within any package
"*" = ["*.html", "*.sql", "*.md", "*.css", "*.js", "*.txt", "*.png", "*.jpg", "*.jpeg", "*.gif", "*.ipynb", "*.ndjson", "*.sh", "*.env", "*.yml", "Dockerfile*", "static/**"]

[project.urls]
Homepage = "https://github.com/un-fao/dynastore/"
Documentation = "https://github.com/un-fao/dynastore/#readme"
Issues = "https://github.com/un-fao/dynastore/issues"
Changelog = "https://github.com/un-fao/dynastore/blob/main/CHANGES.md"

# ==========================================================================
# TYPE CHECKING вҖ” Pyright
# ==========================================================================
[tool.pyright]
pythonVersion = "3.12"
pythonPlatform = "Linux"
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"
include = ["src/dynastore"]
exclude = [
    "**/__pycache__",
    "tests",
    "scripts",
    "build",
]
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportMissingParameterType = false
reportUnnecessaryTypeIgnoreComment = "warning"
# Many runtime deps ship as binary wheels without source (.py) files; pyright
# resolves them via stubs. The "could not be resolved from source" warning is
# noise that doesn't indicate a real problem.
reportMissingModuleSource = "none"

[[tool.pyright.executionEnvironments]]
root = "src/dynastore/models/protocols"
typeCheckingMode = "strict"

# Optional-extra raster paths (rasterio): silence missing-import noise on files
# that lazy-import these at call time. Runtime guards with try/except.
[[tool.pyright.executionEnvironments]]
root = "src/dynastore/modules/coverages"
reportMissingImports = "none"

[[tool.pyright.executionEnvironments]]
root = "src/dynastore/modules/gdal"
reportMissingImports = "none"

[[tool.pyright.executionEnvironments]]
root = "src/dynastore/tasks/gdal"
reportMissingImports = "none"

[[tool.pyright.executionEnvironments]]
root = "src/dynastore/tasks/ingestion/readers"
reportMissingImports = "none"

[[tool.pyright.executionEnvironments]]
root = "src/dynastore/extensions/coverages"
reportMissingImports = "none"

[[tool.pyright.executionEnvironments]]
root = "src/dynastore/extensions/maps"
reportMissingImports = "none"

# Machine compositions have been moved to docker/.env (Docker) and
# .github/config/apps.base.yml (cloud). Use the extras groups above as building blocks.
